--- a/src/routes/views/Dashboard/dashboard.css
+++ b/src/routes/views/Dashboard/dashboard.css
@@ -9,7 +9,8 @@
     flex-flow: row nowrap;
     align-items: center;
     justify-content: space-between;
-    padding: 16px 48px;
+    height: 80px;
+    padding: 0 36px;
     background-color: rgb(225, 229, 237);
     margin: 24px;
     border-radius: 16px;
